src/index.css
@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Baloo+2:wght@400..800&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 222.2 84% 4.9%;

    --card: 0 0% 100%;
    --card-foreground: 222.2 84% 4.9%;

    --popover: 0 0% 100%;
    --popover-foreground: 222.2 84% 4.9%;

    --primary: 222.2 47.4% 11.2%;
    --primary-foreground: 210 40% 98%;

    --secondary: 210 40% 96.1%;
    --secondary-foreground: 222.2 47.4% 11.2%;

    --muted: 210 40% 96.1%;
    --muted-foreground: 215.4 16.3% 46.9%;

    --accent: 210 40% 96.1%;
    --accent-foreground: 222.2 47.4% 11.2%;

    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 210 40% 98%;

    --border: 214.3 31.8% 91.4%;
    --input: 214.3 31.8% 91.4%;
    --ring: 222.2 84% 4.9%;

    --radius: 0.5rem;

    --sidebar-background: 0 0% 98%;
    --sidebar-foreground: 240 5.3% 26.1%;
    --sidebar-primary: 240 5.9% 10%;
    --sidebar-primary-foreground: 0 0% 98%;
    --sidebar-accent: 240 4.8% 95.9%;
    --sidebar-accent-foreground: 240 5.9% 10%;
    --sidebar-border: 220 13% 91%;
    --sidebar-ring: 217.2 91.2% 59.8%;
  }

  .dark {
    --background: 222.2 84% 4.9%;
    --foreground: 210 40% 98%;

    --card: 222.2 84% 4.9%;
    --card-foreground: 210 40% 98%;

    --popover: 222.2 84% 4.9%;
    --popover-foreground: 210 40% 98%;

    --primary: 210 40% 98%;
    --primary-foreground: 222.2 47.4% 11.2%;

    --secondary: 217.2 32.6% 17.5%;
    --secondary-foreground: 210 40% 98%;

    --muted: 217.2 32.6% 17.5%;
    --muted-foreground: 215 20.2% 65.1%;

    --accent: 217.2 32.6% 17.5%;
    --accent-foreground: 210 40% 98%;

    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 210 40% 98%;

    --border: 217.2 32.6% 17.5%;
    --input: 217.2 32.6% 17.5%;
    --ring: 212.7 26.8% 83.9%;

    --sidebar-background: 222.2 84% 4.9%;
    --sidebar-foreground: 210 40% 98%;
    --sidebar-primary: 210 40% 98%;
    --sidebar-primary-foreground: 222.2 84% 4.9%;
    --sidebar-accent: 217.2 32.6% 17.5%;
    --sidebar-accent-foreground: 210 40% 98%;
    --sidebar-border: 217.2 32.6% 17.5%;
    --sidebar-ring: 212.7 26.8% 83.9%;
  }
}

@layer base {
  * {
    @apply border-border;
    line-height: 150%;
  }

  body {
    @apply bg-background text-tumlet-text font-baloo m-0 p-0;
  }

  a {
    @apply no-underline text-tumlet-text cursor-pointer;
  }

  .link-underline {
    @apply underline;
  }
}

@layer components {
  .nav-button {
    @apply font-baloo  bg-[#F16147] flex -rotate-[0.88deg] px-16 py-4 justify-center bg-[#F16147] items-center gap-3 cursor-pointer rounded-xl border border-tumlet-yellow shadow-[8px_8px_0px_0px_#F3B952] transition-all duration-300;
  }
  
  .nav-button:hover {
    @apply -translate-x-1 -translate-y-1 bg-[#F16147];
  }
  
  .nav-button:active {
    @apply translate-x-0 translate-y-0 shadow-[2px_2px_0px_0px_#F16147];
  }

  .cta-button {
    @apply text-white font-baloo flex -rotate-[0.88deg] px-16 py-4 justify-center items-center gap-3 rounded-xl cursor-pointer transition-all duration-200;
  }
  
  .cta-button:hover {
    @apply -translate-x-1 -translate-y-1;
  }
  
  .cta-button:active {
    @apply translate-x-0 translate-y-0;
  }
  .cta-button.color-yellow{
    @apply text-black bg-tumlet-primaryYellow shadow-[8px_8px_0px_0px_#D68057];
  }
  .cta-button.color-red {
    @apply bg-tumlet-primaryRed text-white shadow-[8px_8px_0px_0px_#F3B952];
  }
  .cta-button.color-red:active {
    @apply shadow-[2px_2px_0px_0px_#7A6719];
  }
  .cta-button.color-red:active {
    @apply shadow-[2px_2px_0px_0px_#A42726];
  }

  .character-card {
    @apply border-2 border-tumlet-brown bg-tumlet-beige rounded-lg overflow-hidden cursor-pointer transition-all hover:shadow-lg;
  }
  
  .character-card.active {
    @apply border-4 border-tumlet-blue shadow-[0px_0px_15px_0px_rgba(113,132,190,0.6)];
  }

  .bluff-background {
    position: relative;
    background-color: #FAF1E4;
    border-color: #F3B952;
    overflow: hidden;
  }

  .bluff-background::before {
    content: '';
    position: absolute;
    inset: 0;
    background: url('/pattern.webp');
    background-position: center;
    opacity: 0.18;
    border-radius: inherit;
    pointer-events: none;
    z-index: 0;
  }

  .bluff-background > * {
    position: relative;
    z-index: 1;
  }

  .ganthan-background {
    background: url('/pattern2.png');
    background-position: center;
    border-color:#F16147;
  }
}

